# keepassxc

share/: CMakeLists.txt
share/icons/KeePassXC/: index.theme
share/icons/application/scalable/actions/: .directory
src/: main.cpp
src/core/: DatabaseIcons.cpp  DatabaseIcons.h  Entry.cpp  FilePath.cpp  Group.cpp
src/gui/: LineEdit.cpp  MainWindow.ui  SearchWidget.cpp
src/gui/entry/: EditEntryWidget.cpp
utils/: makepng.sh
